--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "homepage": "https://github.com/learn-co-curriculum/java-script-intro-to-functions-lab#readme",
   "devDependencies": {
     "babel-core": "^6.11.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
     "jsdom": "^9.2.1",
     "mocha": "5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.1.3"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.24.4"
   }
 }
